
#最低cmake版本
cmake_minimum_required (VERSION 3.28)

project(course_01 VERSION 1.0)

set(CMAKE_CXX_STANDARD 11)  # 将 C++ 标准设置为 C++ 11
set(CMAKE_CXX_STANDARD_REQUIRED ON)  # C++ 11 是强制要求，不会衰退至低版本
set(CMAKE_CXX_EXTENSIONS OFF)  # 禁止使用编译器特有扩展

# 打印消息
MESSAGE(STATUS "CMAKE_SOURCE_DIR " ${CMAKE_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_CURRENT_LIST_FILE: ${CMAKE_CURRENT_LIST_FILE}")
MESSAGE(STATUS "CMAKE_CURRENT_BINARY_DIR: ${CMAKE_CURRENT_BINARY_DIR}")
MESSAGE(STATUS "CMAKE_INCLUDE_PATH: ${CMAKE_INCLUDE_PATH}")
MESSAGE(STATUS "CMAKE_LIBRARY_PATH: ${CMAKE_LIBRARY_PATH}")
MESSAGE(STATUS "PROJECT_SOURCE_DIR " ${PROJECT_SOURCE_DIR})
# MESSAGE(STATUS "This is a status message.")
# MESSAGE(WARNING "This is a warning message.")
# MESSAGE(FATAL_ERROR "This is a fatal error message.")

set(SRC ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
add_executable(run ${SRC})

